--- a/styles/main.css
+++ b/styles/main.css
@@ -2,15 +2,15 @@
   position: relative;
 }
 
-#__beecatalyst-container-beecatalyst__ {
-  position: absolute;
-  top: 0;
-  right: 0;
-  width: 100px;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-  padding-right: 20px;
+#__beecatalyst-container {
+  cursor: pointer;
+  user-select: none;
+}
+
+#__beecatalyst-container.active {
+  background: #662483;
+  border-color: #662483;
+  color: #fff;
 }
 
 .blocks > div:first-child {
